policies/block-root-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: block-root-pod
spec:
  containers:
    - name: nginx
      image: nginx
  securityContext:
    runAsUser: 0 # Should result in an error
