policies/no-root-allowed-team.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRootUser
metadata:
  name: no-root-allowed
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
