policies/prevent-no-label-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prevent-no-label-pod
spec:
  containers:
    - name: nginx
      image: nginx
  securityContext:
    runAsUser: 0 # Should result in an error
